# GLASs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  architecture.dot  mpi_bind.sh  nsys.sh  run.sh  run_n4.sh  test.sh
.github/workflows/: build_gnu.yml  build_nvhpc.yml  restrict-pr.yml
Apps/: CMakeLists.txt
Apps/AdvectionDiffusion1D/: AdvectionDiffusion1D.F90
Apps/AdvectionDiffusion1D/modules/: mod_AdvectionDiffusion1D_Base.f90  mod_AdvectionDiffusion1D_Implicit.f90  mod_AdvectionDiffusion1D_Jacobian.f90  mod_AdvectionDiffusion1D_LGL.f90
Apps/AdvectionDiffusion1D/sources/: mod_AdvectionDiffusion.F90  mod_AdvectionDiffusion1D_Base.f90  mod_AdvectionDiffusion1D_Implicit.f90  mod_AdvectionDiffusion1D_Jacobian.f90
Apps/Diffusion1D/: CMakeLists.txt  Diffusion1D.F90
Apps/Diffusion1D/sources/: mod_Diffusion.F90  mod_Diffusion1D.F90  mod_Diffusion1D_Base.F90  mod_Diffusion1D_Base.f90  mod_Diffusion1D_Implicit.F90  mod_Diffusion1D_Jacobian.F90  mod_Diffusion1D_LGL.F90  mod_Diffusion1D_Operators.F90
Apps/Elastodynamics1D/: CMakeLists.txt  Elastodynamics1D.F90
Apps/Elastodynamics1D/baseline/: IMEX.ref  IMPLICIT.ref
Apps/Elastodynamics1D/sources/: mod_Elastodynamics1D.F90  mod_Elastodynamics1D_Base.F90  mod_Elastodynamics1D_IMEX.F90  mod_Elastodynamics1D_Implicit.F90
Examples/AdvectionDiffusion1D/: AdvectionDiffusion.F90  CMakeLists.txt
Tests/: CMakeLists.txt
Tests/CG_wrapper_F/: CMakeLists.txt  unitt_32.F90
Tests/CUDA_Utils/: CMakeLists.txt  unitt.cpp  unitt_16.cpp  unitt_32.cpp  unitt_64.cpp
Tests/Comm_Utils/: CMakeLists.txt  unitt_32.cpp
Tests/ConjugateGradient/: CMakeLists.txt  DeviceSide.cu  DeviceSide.cuh  HostSide.cpp  HostSide.hpp  unittKernel.cu  unittKernel.cuh  unitt_32.cpp  unitt_64.cpp  unitt_cg32.cpp
Tests/DeviceMemory/: CMakeLists.txt  unitt_16.cpp  unitt_32.cpp  unitt_64.cpp
Tests/DeviceUtils/: CMakeLists.txt  unitt.cpp  unittKernels.cu  unittKernels.cuh  unitt_32.cpp
Tests/FlexiblePCG/: AuxKernels.cu  AuxKernels.cuh  CMakeLists.txt  HostSide.cpp  HostSide.hpp  halo_ops.cpp  halo_ops.hpp  host_ops.cpp  host_ops.hpp  test_fpcg.py  unittKernel.cu  unittKernel.cuh  unitt_16.cpp  unitt_32.cpp  unitt_64.cpp
Tests/GMRES/: CMakeLists.txt  HostSide.cpp  HostSide.hpp  unitt_32.cpp  unitt_64.cpp
Tests/GmshReader/: CMakeLists.txt  square.geo  square.msh  unitt.cpp
Tests/IterSolvers/: CMakeLists.txt  TestSolver.cpp  TestSolver.hpp  unitt_32.cpp  unitt_64.cpp
Tests/Kernels_Lv1/: CMakeLists.txt  unitt_32.cpp  unitt_64.cpp
Tests/LinAlgebra_CG_F90/: CMakeLists.txt  unitt_32.F90
Tests/LinAlgebra_CG_F90_old/: unitt_32.F90
cmake/: GLASSConfig.cmake.in  compilerOps.cmake
src/: CMakeLists.txt
src/Apps/Elastodynamics1D/: Elastodynamics1D.F90  mod_Elastodynamics1D.F90
src/Libs/: CMakeLists.txt
src/Libs/CUDA_Utils/: CMakeLists.txt
src/Libs/CUDA_Utils/includes/: CUDA_Utils.cuh
src/Libs/CUDA_Utils/sources/: CUDA_Utils.cu
src/Libs/Comm_Utils/: CMakeLists.txt
src/Libs/Comm_Utils/includes/: Comm_Utils.hpp
src/Libs/Comm_Utils/sources/: Comm_Utils.cpp
src/Libs/DeviceMemory/: CMakeLists.txt
src/Libs/DeviceMemory/includes/: DeviceMemory.hpp
src/Libs/DeviceMemory/sources/: DeviceMemory.cpp
src/Libs/DeviceUtils/: CMakeLists.txt
src/Libs/DeviceUtils/includes/: DeviceUtils.hpp
src/Libs/DeviceUtils/sources/: DeviceUtils.cpp
src/Libs/FEM2D/: CMakeLists.txt
src/Libs/FEM2D/GmshReader/: CMakeLists.txt
src/Libs/FEM2D/GmshReader/includes/: GmshReader.hpp
src/Libs/FEM2D/GmshReader/sources/: GmshReader.cpp
src/Libs/Kernels_Lv1/: CMakeLists.txt
src/Libs/Kernels_Lv1/includes/: Kernels_Lv1.cuh
src/Libs/Kernels_Lv1/sources/: Kernels_Lv1.cu
src/Libs/LinAlgebra/: CMakeLists.txt
src/Libs/LinAlgebra/EntryPoint/: CMakeLists.txt
src/Libs/LinAlgebra/EntryPoint/includes/: EntryPoint.hpp
src/Libs/LinAlgebra/EntryPoint/sources/: EntryPoint.cpp
src/Libs/LinAlgebra/IterSolvers/: CMakeLists.txt
src/Libs/LinAlgebra/IterSolvers/includes/: ConjugateGradient.hpp  ConjugateGradient_wrapper.hpp  GMRES.hpp  IterSolvers.hpp
src/Libs/LinAlgebra/IterSolvers/sources/: ConjugateGradient.cpp  ConjugateGradient_F_wrapper.F90  ConjugateGradient_wrapper.cpp  GMRES.cpp  IterSolvers.cpp
src/Libs/LinAlgebra/MathOps/: CMakeLists.txt
src/Libs/LinAlgebra/MathOps/includes/: ArnoldiIter.hpp
src/Libs/LinAlgebra/MathOps/sources/: ArnoldiIter.cpp
src/Libs/TensorUtils/: CMakeLists.txt
src/Libs/TensorUtils/includes/: TensorUtils.hpp
src/Libs/TensorUtils/sources/: TensorUtils.cpp
