if(USE_GPU)
    add_subdirectory(DeviceUtils)
    add_subdirectory(DeviceMemory)
    add_subdirectory(Kernels_Lv1)
endif()
add_subdirectory(Comm_Utils)
add_subdirectory(IterSolvers)
add_subdirectory(ConjugateGradient)
add_subdirectory(GMRES)
#add_subdirectory(FlexiblePCG)
#add_subdirectory(GmshReader)
#add_subdirectory(LinAlgebra_CG_F90)