project(unitt_ConjugateGradient)

file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/*.cu)
file(GLOB_RECURSE INC_FILES ${CMAKE_CURRENT_LIST_DIR}/*.cuh)
set(HEADER_DIR ${CMAKE_CURRENT_LIST_DIR})

# FP32
add_executable(${PROJECT_NAME}_32 unitt_32.cpp ${SRC_FILES} ${INC_FILES})
target_link_libraries(${PROJECT_NAME}_32 PUBLIC IterSolvers)
target_include_directories(${PROJECT_NAME}_32 PUBLIC ${HEADER_DIR})

add_test(NAME ${PROJECT_NAME}_32 COMMAND mpirun -np 1 $<TARGET_FILE:${PROJECT_NAME}_32> WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})