project(IterSolvers LANGUAGES CXX Fortran)

file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.F90)
file(GLOB_RECURSE INC_FILES ${CMAKE_CURRENT_LIST_DIR}/*.hpp)
set(HEADER_DIR ${CMAKE_CURRENT_LIST_DIR}/includes)
set(LIB_MODULE_DIR ${CMAKE_CURRENT_BINARY_DIR}/modules)

add_library(${PROJECT_NAME} ${LIBRARY_TYPE} ${SRC_FILES} ${INC_FILES})
target_link_libraries(${PROJECT_NAME} PUBLIC EntryPoint)

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${HEADER_DIR}>
        $<BUILD_INTERFACE:${LIB_MODULE_DIR}>
        $<INSTALL_INTERFACE:include/IterSolvers>
)

set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON Fortran_MODULE_DIRECTORY ${LIB_MODULE_DIR})

install(TARGETS ${PROJECT_NAME}
    EXPORT GLASSTargets
    DESTINATION lib
)

install(FILES ${INC_FILES} DESTINATION include/IterSolvers)
install(DIRECTORY ${LIB_MODULE_DIR}/ DESTINATION include/IterSolvers FILES_MATCHING PATTERN "*.mod")